Spacing all fixed

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@
   --iconwidth: 90px;
   --borderwidth: 3px;
   --headerheight: 120px;
+  --elementspacing: 5px;
 }
 
 * {
@@ -35,7 +36,7 @@ body {
   background-color: rgba(78, 181, 241, .7);
   width: 100%;
   margin-top: 30px;
-  margin-bottom: 5px;
+  margin-bottom: var(--elementspacing);
 }
 
 .row-distribution {
@@ -89,7 +90,7 @@ body {
 
 .search-form {
   width: 100%;
-  margin-bottom: 5px;
+  margin-bottom: var(--elementspacing);
 }
 
 .search-query {
@@ -126,7 +127,7 @@ body {
   display: block;
   padding: 0.5em 0em;
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: var(--elementspacing);
   border: 3px solid white;
   text-decoration: none;
   font-size: 20px;
@@ -143,43 +144,24 @@ body {
 }
 
 .left-column {
+  width: calc(50% - .5*var(--elementspacing));
   float: left;
-  width: 50%;
-  margin-right: 2.5px;
-  display: inline;
 }
 
 .right-column {
-  width: 50%;
+  width: calc(50% - .5*var(--elementspacing));
   float: right;
-  margin-left: 2.5px;
-  padding-top: 5px;
-  display: inline;
-  /*width: 50%;*/
-  height: auto;
 }
 
 .weather-pane {
-  width: 50%;
+  width: 100%;
   height: 100%;
   background-color: rgba(78, 181, 241, .7);
   border: 3px solid white;
-}
-/*
-.weatherPane {
-  width: 100%;*/
-  /*position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  vertical-align: middle;*/
-  /*padding: 0.2em 1.2em;
+  padding: 0.2em 1.2em;
   text-decoration: none;
-  color: #FFFFFF;
-  background: rgba(78, 181, 241, .7);
-  height: 100%;
-}*/
+  color: white;
+}
 
 @media screen and (min-width: 600px) {
   .upstate-logo-left {
